# openbsd-libz

./: .gitignore  COPYING  Makefile.am  configure.ac
include/: Makefile.am
src/: Makefile.am  bsd.h  gzio.c
